--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,6 +21,18 @@ img.img-fluid {
   color: rgb(246, 245, 245);
 }
 
+#social-logo:hover {
+  color: orange;
+}
+
 .cta {
-  color: white;
+  color: rgb(248, 139, 13);
+  font-family: "Noto Sans Bassa Vah", sans-serif;
+  margin-top: 5vh;
+  font-size: 3vw;
+  flex-wrap: nowrap;
+}
+
+.spotify-cta {
+  justify-content: right;
 }
