--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,7 +8,7 @@ iframe {
 }
 
 img.img-fluid {
-  margin-top: 10vh;
+  margin-top: 4vh;
 }
 
 .rounded-corners {
@@ -27,10 +27,17 @@ img.img-fluid {
 
 .cta {
   color: rgb(248, 139, 13);
-  font-family: "Noto Sans Bassa Vah", sans-serif;
-  margin-top: 5vh;
-  font-size: 3vw;
+  font-family: "Roboto Condensed", sans-serif;
+  margin-top: 1vh;
+  font-size: 2vw;
   flex-wrap: nowrap;
+  letter-spacing: 1vw;
+  font-style: italic;
+  padding: 5vh 10vh;
+}
+
+#teeth-font {
+  color: cornsilk;
 }
 
 .spotify-cta {
